--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
       <div id="phone-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
       </div>
       <!-- show all button -->
-      <div id="show-all-button" class="hidden">
-        <button class="btn btn-active btn-accent">Show all button</button>
+      <div id="show-all-button" class="hidden my-8 text-center">
+        <button onclick="showAllButton()" class="btn btn-active btn-accent">Show all button</button>
       </div>
     </section>
   </main>
